Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -216,17 +216,6 @@ Focusing on the UK grand challenge to `Use data, Artificial Intelligence and inn
 \section{Methodology}
 \label{sec:methodology}
 
-
-
-\subsection{Approach}
-
-Our approach requires two main inputs: a list of keywords describing the contents of a mission (its domain, purpose, technology etc.) and a list of text descriptions about potentially relevant R&I activities to be queried with these keywords. These two inputs are sufficient to map a mission field. Additional metadata such as funding year, level of funding, name of the funder, organisations collaborating in funded projects and outcomes and impacts can be used to  generate additional indicators. 
-
-All this information, is generally available from open datasets about research funding such as the Gateway to Research (which we are using in this paper), the CORDIS database of EU Horizon 2020 funded projects, or the National Institutes of Health World Reporter database of health-related research. It would also be possible to use this approach in other potentially relevant datasets such as patent databases, pre-prints or open source software (with the caveat that they will generally contain a narrow set of disciplines than what is available in broad-based research funding databases). All this means that the approach that we follow in this paper could be applied to other data sources.
-
-In principle, the framework that we develop could also be applied to other missions as long as activities relevant to them are captured in research funding databases, and it is possible to extract keywords from their definition. The facility for this depends on the mission in question. For example, the mission that we selected for this paper has a relatively well defined set of keywords around `AI’ and `chronic conditions’ that can be mapped on the concepts of ‘solution space’ and ‘problem space’. This makes it easier to delineate and analyse the mission field.\footnote{And even in this case there is debate about the definition of what comprises a `chronic condition’, as we will see below.} Other missions, such as the previously mentioned EU mission to reach zero emissions in EU cities by 2030 would require additional background research to identify bodies of research and knowledge that might contribute to achieving the goal in the context of urban infrastructures (the solution space). Of course, the results of the analysis will be sensitive to the keywords that are selected. Our decision to exclude mission impacts from our indicator framework also makes our approach more scalable, since that is one dimension where missions are likely to be highly heterogeneous. One could think of the framework that we present here as a modular component of a broader measurement framework also including indicators of R&I impact that would be specific to the mission under analysis.
-
-
 \subsection{Data sources}
 \label{subsec:data}
 
@@ -484,11 +473,11 @@ Our analysis suggests high levels of technological readiness in the active missi
 \subsection{Trajectories of the active mission field}
 \label{subsec:trajectory}
 
-We conclude our summary of findings with the results of our analysis of the trajectories in the active mission field. Here, we are particularly interested in understanding the extent to which the trajectories being explored in the mission field are diversified or concentrated, which of the mission components dominates the mission field, what is the role of various research funders (Research Councils) in maintaining diversity and exploration in the active mission field, and whether there are any disease areas which are currently being neglected in the mission field.
+We conclude our summary of findings with the results of our analysis of the trajectories in the active mission field.  Our analysis is based on the \texttt{TopSBM} analysis that we outlined in Subsection \ref{subsec:topic}. Table \ref{tab:topics} presents the topics that we extracted through this analysis at the second level of aggregation (comprising 71 topics).\footnote{The first level of aggregation has 491 topics, which is too detailed for reporting here, while the third level of aggregation comprises 13 topics, which is too aggregated.}. 
 
-Our analysis is based on the \texttt{TopSBM} analysis that we outlined in Subsection \ref{subsec:topic}. Table \ref{tab:topics} presents the topics that we extracted through this analysis at the second level of aggregation (comprising 71 topics).\footnote{The first level of aggregation has 491 topics, which is too detailed for reporting here, while the third level of aggregation comprises 13 topics, which is too aggregated.}. We have classified topics into their `origin' mission component depending on whether they tend to be over-represented in the AI mission component or the chronic disease mission component.\footnote{That is, if the share of projects with presence in the topic in a mission component normalised by the share in the potential mission field are above one}. In doing this, we aim to understand the level of influence of our two mission components in the active mission field. This is important because this influence could shape the types of problems that are tackled and the approaches that are used. One could for example imagine that researchers from the AI community will be specially attracted to domains with the large datasets required to train modern deep learning algorithms. Researchers approaching the field from a medical perspective may prefer to focus on disease areas with higher prevalence and costs for the medical system. 
+We have classified topics into the mission component they are more strongly related.\footnote{We do this by comparing the share of projects where the topic has a presence in one of the mission components with the share of projects with the topic in the population overall this}. In doing this, we aim to understand the level of influence of our two mission components in the active mission field. This is important because this influence could shape the types of problems that are tackled and the approaches that are used. One could for example imagine that researchers from the AI community may be specially attracted to domains with the large datasets required to train modern deep learning algorithms. Researchers approaching the field from a medical perspective may prefer to focus on disease areas that are more costly for the medical system. 
 
-As we see in Table \ref{tab:topics}, the AI set of topics includes terms related to robotics, language, networks, imaging and algorithms (as well as interestingly, a topic related to ethics). The Chronic Disease sets mostly refers to disease areas including asthma, diabetes, pregnancy, cancer or HIV, as well as scientific terms in biotechnology such as cells or DNA. We also detect some noisy topics, and others capturing very generic collection of terms that researchers use when writing grants (eg \textbf{also research use new}).\footnote{A next step for us will be to explore potential strategies to remove these topics, for example by filtering out low-salience terms from the data before training the topic model.}
+As we see in Table \ref{tab:topics}, the AI-related set of topics includes terms about robotics, language, networks, imaging and algorithms (as well as interestingly, one about ethics). The Chronic Disease topics mostly refer to disease areas including asthma, diabetes, pregnancy, cancer and HIV, as well as scientific terms in biotechnology such as cells or DNA. We also detect some noisy topics, and others capturing very generic vocabularies that researchers use when writing grants (eg \textbf{also research use new}).\footnote{A next step for us will be to explore strategies to remove these topics, for example by filtering out low-salience terms from the data before training the topic model.}
 
 %\begin{landscape}
 \begin{table}
@@ -543,7 +532,7 @@ As we see in Table \ref{tab:topics}, the AI set of topics includes terms related
 \label{tab:topics}
 %\end{landscape}
 
-Figure \ref{fig:topic_distr} shows the percentage of active mission field projects where different topics are present, and their origin. We observe that the most prevalent topics are more strongly related to AI. Although some of them are quite generic and relate to impacts, results and methods, others are more AI-specific areas, concerning topics such as data, prediction, networks and applications. While this result could reflect the dominance of AI approaches in the active mission field (in line with the importance of computer science in the active mission field highlighted in Figure \ref{fig:disc_mix}), it could also be explained by the fact that AI techniques and methods are `general purpose' and applicable to many different projects, while disease areas will be more important in specific projects and less likely to appear across the corpus. Supporting this idea, the top chronic disease related topics that appear in the data is a generic one with terms such as `disease', `condition' and `symptom'. 
+Figure \ref{fig:topic_distr} shows the percentage of active mission field projects where different topics are present, and their origin. We observe that the most prevalent topics are more strongly related to AI. Although some of them are quite generic and relate to impacts, results and methods, others are more AI-specific areas, concerning topics such as data, prediction, networks and applications. While this result could reflect the dominance of AI approaches in the active mission field (in line with the importance of computer science in the active mission field highlighted in Figure \ref{fig:disc_mix}), it could also be explained by the fact that AI techniques and methods are `general purpose' and applicable to many different projects, while disease areas will be more important in specific projects and less likely to appear across the corpus. Supporting this idea, the most important chronic disease related topic in the data is a generic one with terms such as `disease', `condition' and `symptom'. 
 
 \begin{figure}[!ht]
     \centering
@@ -552,9 +541,8 @@ Figure \ref{fig:topic_distr} shows the percentage of active mission field projec
     \label{fig:topic_distr}
 \end{figure}
 
-In Figure \ref{fig:topic_comp} we present the topic composition of all projects in the active mission field ranked by decreasing importance in the chronic disease-related group. The lower panel presents the year when each project was funded in the vertical axis, the level of funding it received in the size of the marker, and the funder in its colour. As may be expected, projects strongly dominated by AI-topics tend to be funded by the Engineering and Physical Sciences Research Council (EPSRC) while those with a stronger medical component are funded more frequently by the Medical Research Council (MRC) and the Biotechnology and Biological Research Sciences (BBSRC). Having said this, the EPSRC is also involved in projects with a substantial chronic-disease element. 
-
-The figure also helps us track the evolution of the active mission field in some detail. We see for example, that the BBSRC was an earlier entrant in the 2010s with a cluster of projects analysing genomic and imagining data. There is a collection of large scale projects funded by the MRC in the 2015s, including the Centre for Health service and Academic Partnership in Translational eHealth Research (CHAPTER), MICA (the Health e-Research Centre) and the University of Oxford Big Data Institute, all large scale initiatives to analyse big health datasets with data analytics, data science and machine learning. In recent years we see an apparent diversification in terms of the range of funders involved, and more topics with higher chronic disease topic weight.
+In Figure \ref{fig:topic_comp} we present the topic composition of all projects in the active mission field ranked by the importance of AI-related topics. The lower panel presents the year when each project was funded in the vertical axis, the level of funding it received with the size of the marker, and the funder with its colour. As could be expected, projects strongly dominated by AI-topics tend to be funded by the Engineering and Physical Sciences Research Council (EPSRC) while those with a stronger medical component are funded more often by the Medical Research Council (MRC) and the Biotechnology and Biological Research Sciences (BBSRC). Having said this, the EPSRC is also involved in projects with a substantial chronic-disease element. 
+The bottom panel of the figure helps us track the evolution of the active mission field in some detail. We see for example, that the BBSRC was an earlier entrant in the 2010s with a cluster of projects analysing genomic and imagining data. There is a collection of large scale projects funded by the MRC in the 2015s, including the Centre for Health service and Academic Partnership in Translational eHealth Research (CHAPTER), MICA (the Health e-Research Centre) and the University of Oxford Big Data Institute, all large scale initiatives to analyse big health datasets with data analytics, data science and machine learning. In recent years we see some evidence of diversification in the range of funders involved, and more projects where chronic disease topics play a stronger role.
 
 \begin{figure}[!ht]
     \centering
@@ -563,7 +551,7 @@ The figure also helps us track the evolution of the active mission field in some
     \label{fig:topic_comp}
 \end{figure}
 
-Figure \ref{fig:topic_evol} considers the evolution in the importance of different topics over time, based on their overall weight in the population. We see an increase in the total topic weight, linked with an increase in the number of projects and their areas they cover. The lower panel presents the evolution in the entropy (a measure of diversity) in AI-related and chronic disease related topics. We see that this measure has remained stable in recent years, suggesting that the collection of trajectories being explored in the active mission field is not becoming narrower over time, possibly as a consequence of the involvement of a wider range of funders in the mission field.
+Figure \ref{fig:topic_evol} considers the evolution in the importance of different topics over time, based on their overall weight in the population. We see an increase in the total topic weight, in line with the increase in the number of projects and the areas they cover. The lower panel presents the evolution in the entropy (a measure of diversity) in AI-related and chronic disease related topics. This measure has remained stable in recent years, suggesting that the collection of trajectories being explored in the active mission field is not becoming narrower over time, possibly as a consequence of the participation of a wider range of funders in it.
 
 \begin{figure}[!ht]
     \centering
@@ -572,7 +560,7 @@ Figure \ref{fig:topic_evol} considers the evolution in the importance of differe
     \label{fig:topic_evol}
 \end{figure}
 
-We conclude, in Figure \ref{fig:cd_importance}, by focusing on the evolution of the occurrence of various chronic-disease related topics in the active mission field. I
+We conclude, in Figure \ref{fig:cd_importance}, by focusing on the evolution of the occurrence of various chronic-disease related topics in the active mission field. If we leave aside generic topics, we see that topics related to genetics, cancer, HIV and depression and mental health tend to appear more frequently in recent years, while topics related to ageing, obesity, asthma and pregnancy appear less often, suggesting that AI methods are being deployed less often in these areas. The figure illustrates how the kind of analysis we have presented in this sub-section could be used to identify `gaps' in a mission field, potentially prompting targeted funding interventions to address them. 
 
 \begin{figure}[!ht]
     \centering
@@ -584,34 +572,51 @@ We conclude, in Figure \ref{fig:cd_importance}, by focusing on the evolution of 
 \section{Discussion and conclusions}
 \label{sec:conclusion}
 
-\section{Discussion and conclusions}
-The exploratory analysis we have presented in this paper illustrates the potential of analysing open funding databases to produce RITO indicators for mission-driven R&I policy.
+The exploratory analysis we have presented in this paper illustrates the potential of analysing open funding databases to produce novel indicators for mission-oriented R\&I policies.
 
-In summary, we have shown that the UK mission to encourage the use of Artificial Intelligence to transform the prevention, early diagnosis and treatment of chronic diseases by 2030 is justified by the relative under-representation of projects related to chronic diseases amongst the population of projects that involve AI techniques. However, the number of
-projects in the active mission field have been growing rapidly in recent years, with increasing participation of Medical and Biological sciences projects. It will be important to remember this when it comes to evaluate the impact of the challenge.
+In summary, we have shown that the UK mission to deploy Artificial Intelligence to transform the prevention, early diagnosis and treatment of chronic diseases by 2030 is justified by the relative under-representation of projects related to chronic diseases in the population of projects that involve AI techniques. However, the number of projects in the active mission field have been growing rapidly in recent years, with increasing participation of Medical researchers. This is consistent with a model of diffusion where the deployment of AI for the prevention, diagnosis and treatment of chronic diseases is initiated by computer scientists with expertise on machine learning methods and a focus on domains where bigger datasets are available (such as imaging or genomics), followed by the adoption of these methods by domain experts in medical research. An interesting question is the extent to which the technologies and tools developed in the former stream of research are relevant for the latter. 
 
-Our analysis also reveals a high degree of interdisciplinary crossover in the mission field, consistent with the idea that different bodies of knowledge are coming together as AI is deployed to treat chronic diseases. When we look at research outputs, we find that projects in the active mission field are already producing applied outputs such as patents and spinouts, suggesting that the mission field is technologically and commercially feasible.
+The fact that the active mission field has been expanding long before the Government launched its mission will need to be taken into account when it comes to evaluating the impact of the challenge. It also raises the question of what changes in the current trajectory of the active mission field does the Government seek to achieve with its intervention, and what actions outside research funding and support need to be undertaken to ensure that the outputs of the active mission field contribute to achieve the mission's transformational goals.
 
-We have also explored some basic demographic characteristics of participants in the mission field, finding that those specialising in it tend to be younger than organisations specialising in the chronic disease area. One interpretation of this is that the application of AI is bringing new ‘blood’ into that domain, again consistent with the goals of a mission (although not
-necessarily caused by it, as previously mentioned).
+Our analysis also reveals a high degree of interdisciplinary crossover in the mission field, consistent with the idea that different bodies of knowledge are coming together as AI is deployed to treat chronic diseases. When we look at research outputs, we find that projects in the active mission field are already producing applied outputs such as patents, software and spinouts,
+suggesting that the mission field is technologically and commercially feasible and highlighting its potential.
 
-Finally, we have sought to identify different research trajectories in the mission field by clustering projects according to their semantic similarity. Our preliminary results suggest a diverse field with a variety of applications of AI to treat chronic conditions, ranging from big data projects to genetics, and sensors to cancer and cardiovascular. This reflects the diverse range of funders approaching the field from different disciplinary perspectives. Each of these trajectories could be analysed using the indicators we have developed in the paper to get a more granular view of their composition, evolution and connectivity. 
+We have also explored some basic characteristics of the organisations participating in the mission field, finding that those organisations specialising in it tend to be younger than organisations specialising in either mission component (AI or chronic diseases). One interpretation for this is that the application of AI is bringing new actors into that domain, again consistent with the goals of a mission (although not necessarily caused by it, as previously mentioned).
 
+Finally, we have mapped research trajectories in the mission field using a bottom-up, topic modelling approach . Our initial results suggest that although AI-related topics are more prevalent, in line with the importance of Mathematics and Computing in the active mission field, this is not resulting in a loss of diversity in the range of trajectories being explored. This potentially reflects the diverse range of funders supporting the field from different disciplinary perspectives. We also identify some disease areas such as ageing, obesity and pregnancy-related issues with low levels of activity in the mission field - a gap that could be addressed through targeted funding.
+
+\subsection{Limitations}
 Our analysis is not with without limitations. First, and as discussed, our initial selection of chronic disease keywords has an element of arbitrariness - an important next step will be to validate and enrich this list with input from other stakeholders and domain experts, and in particular the research funders that organised the UK AI grand challenge. A better understanding of their scope of the domain and their specific objectives will help us hone our
 methodology and definitions further.
 
-Our analysis is also constrained by its focus on open research databases that exclude nonacademic research activities which could be relevant for a mission field, and do not generally include sufficiently large project descriptions to deploy more sophisticated forms of semantic analysis than what we have performed here. One option to address this would be to incorporate
-into our analysis text about project outputs, but this would be at the expense of timeliness, given publication and patent lags etc. We highlighted the potential for using social media data to capture public interest in a mission and its contents, and to analyse mission alignment with societal needs. We plan to do this in follow-on work.
+Second, our analysis is constrained by its focus on open research databases that exclude nonacademic research activities which could be relevant for a mission field. The abstracts in these open databases are not generally long enough to deploy more sophisticated forms of semantic analysis than what we have performed here, introducing noise in our indicators. We have for example found some instances where our classification generates false positives because AI or chronic-disease related terms are used in otherwise irrelevant abstracts, or capture generic big data, analytics and bioinformatics projects that mention chronic disease areas as an example application among many others. 
 
-The indicators that we have developed are relatively simple and therefore easy to communicate and explain, but this is at the cost of hiding some of the complexity of mission fields sitting in the intersection of domains. There are many opportunities to use network analysis to estimate structural characteristics of topic and organisational networks in mission fields and how they evolve in response to policy interventions, and will do this in future
+Some options to address this include incorporating into our analysis text about project outputs, but this would be at the expense of timeliness, given publication and patent lags etc., or accessing the full project proposals which are currently unavailable. 
+
+\subsection{Next steps}
+The indicators that we have developed are relatively simple and therefore easy to communicate and explain, but this is at the cost of hiding some of the complexity of mission fields sitting in the intersection of domains. There are many opportunities to use network analysis to estimate structural characteristics of topic and organisational networks in mission fields and how they evolve in response to policy interventions. We plan to do this in future
 work. 
 
 This brings us to the question of impact, which as discussed in the introduction is currently not included in our analysis. Being able to attribute macro impacts such as future changes in patient outcomes in chronic conditions to a R&I policy intervention like the one we are studying here is a daunting challenge that will require the deployment of health-specific data
-sources and careful experimental design. Being able to monitor the journey of R&I outcomes from research into application could help with this - and data sources such as GtR or CORDIS, through Open AIRE, support this kind of analysis. At the same time, it will be critical to avoid losing sight of less direct but also important pathways to impact for the research funded as part of a mission, such as knowledge spillovers and expert labour flows.
+sources and careful experimental design. Being able to monitor the journey of R\&I outcomes from research into application could help with this - and data sources such as GtR or CORDIS, through the Open AIRE repository of project outputs, would support this kind of analysis. At the same time, it will be important to avoid losing sight of less direct but also important pathways to impact for the research funded as part of a mission, such as knowledge spillovers and skilled labour flows.
 
-Geographical variation and clustering in the recipients of funding within the mission could help quantify these dimensions of impact, highlighting another interesting dimension of analysis (spatial) that remains underexplored in this paper. 
+Geographical variation and clustering in the recipients of funding within the mission could help quantify these dimensions of impact, highlighting another interesting dimension of analysis (spatial) that remains under-explored in this paper. 
 
+Another obvious next step would be apply the approach that we have developed in this paper to other innovation missions. This is an option as long as the activities relevant for them are captured in research funding databases, and it is possible to extract keywords from their definition. The facility for this depends on the mission in question. For example, the mission that we selected for this paper has a relatively well defined set of keywords around `AI’ and `chronic diseases’ that can be mapped on the concepts of ‘solution space’ and ‘problem space’.\footnote{And even here there is ambiguity and contestability about the definition of AI and the classification of diseases in the `chronic' category.} This makes it easier (if not easy) to delineate and analyse the mission field. Other missions, such as the previously mentioned EU mission to reach zero emissions in EU cities by 2030 would require additional background research to identify bodies of research and knowledge that might contribute to achieving the goal in the context of urban infrastructures (the solution space).
+
+The required information for implementing our approach is generally available from open datasets about research funding such as the Gateway to Research (which we have used here), the CORDIS database of EU Horizon 2020 funded projects, or the National Institutes of Health World Reporter database of health-related research (with the previous caveat about description length). We could also apply our mission mapping approach to other potentially relevant datasets such as patent databases, pre-prints or open source software (with the additional caveat that they will generally contain a narrow set of disciplines than what is available in broad-based research funding databases). All this means that the approach that we follow in this paper could be applied to other data sources, providing a more holistic view of the situation and evolution of the mission field.
+
+\subsection{Policy implications}
+The analysis that we have presented in this paper highlights the potential of open data sources and data science analysis for the production of indicators that could inform mission oriented-innovation policies. Our indicators capture key dimensions of mission-related activity, evolution and composition which should be of interest to policymakers who desire to harness the potential of missions to tackle important societal challenges with new technologies and spur the development of new industries and research fields while avoiding the risks of picking winners, capture by vested interests, or premature lock-in.
+
+In providing a detailed description of an active mission field, its participants and its history, the sort of evidence base we have developed in this paper could encourage a more precise articulation of the purposes of a mission and the strategies to achieve them going beyond activites that are taking place already, and striking the right balance between ambition and pragmatism. 
+
+%We believe that the full potential of these methods and indicators will only be realised when they are embedded into interactive and flexible tools for data exploration that enable policymakers and other relevant stakeholders including participants in the mission field as well as users and the wider public to interrogate the data, monitor trends, identify gaps in the trajectories being pursued in a mission and identify opportunities for collaboration.  
+
+
+\section*{Acknowledgments}
 This paper uses Python. All the analysis was performed in memory in a 16GB 2.4GhZ laptop and documented in JuPyteR notebooks. This repo [link] contains draft versions of the notebook still to be refactored and documented.
+
 
 \bibliographystyle{apalike}
 %\bibliography{aguiar}
