Updates from Overleaf

--- a/references.bib
+++ b/references.bib
@@ -4142,3 +4142,54 @@ Conclusion: Identi cation of these attributes could form the basis of a new meas
 	pages = {eaaq1360},
 	file = {Full Text:/Users/jmateosgarcia/Zotero/storage/S9SFLKJI/eaaq1360.html:text/html}
 }
+
+@article{king2013using,
+  title={Using open innovation to identify the best ideas},
+  author={King, Andrew and Lakhani, Karim R},
+  journal={MIT Sloan management review},
+  volume={55},
+  number={1},
+  pages={41},
+  year={2013},
+  publisher={Massachusetts Institute of Technology, Cambridge, MA}
+}
+
+@article{lecun2015deep,
+  title={Deep learning},
+  author={LeCun, Yann and Bengio, Yoshua and Hinton, Geoffrey},
+  journal={nature},
+  volume={521},
+  number={7553},
+  pages={436},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
+
+@article{ravi2016deep,
+  title={Deep learning for health informatics},
+  author={Rav{\`\i}, Daniele and Wong, Charence and Deligianni, Fani and Berthelot, Melissa and Andreu-Perez, Javier and Lo, Benny and Yang, Guang-Zhong},
+  journal={IEEE journal of biomedical and health informatics},
+  volume={21},
+  number={1},
+  pages={4--21},
+  year={2016},
+  publisher={IEEE}
+}
+
+@article{miotto2017deep,
+  title={Deep learning for healthcare: review, opportunities and challenges},
+  author={Miotto, Riccardo and Wang, Fei and Wang, Shuang and Jiang, Xiaoqian and Dudley, Joel T},
+  journal={Briefings in bioinformatics},
+  volume={19},
+  number={6},
+  pages={1236--1246},
+  year={2017},
+  publisher={Oxford University Press}
+}
+
+@book{arthur1994increasing,
+  title={Increasing returns and path dependence in the economy},
+  author={Arthur, W Brian},
+  year={1994},
+  publisher={University of michigan Press}
+}
